--- a/StandMVC/StandMVC/Info.plist
+++ b/StandMVC/StandMVC/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>请求使用照相机</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>拍摄视频使用麦克风</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>拍照存放照片</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
