--- a/StandMVC/StandMVC/Info.plist
+++ b/StandMVC/StandMVC/Info.plist
@@ -21,11 +21,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>请求使用照相机</string>
+	<string>分享图片</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>拍摄视频使用麦克风</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>拍照存放照片</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>我就要使用相册</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
